--- a/course-service/src/main/resources/application.properties
+++ b/course-service/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=course-service
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8081
-spring.profiles.active=dev
+spring.profiles.active=gcp
